--- a/ms-ui-myportfolio/package.json
+++ b/ms-ui-myportfolio/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "rollup-plugin-visualizer": "^5.14.0",
+    "sass": "^1.90.0",
     "vite": "^6.3.5"
   },
   "eslintConfig": {
